# autokluster

./: .gitignore  CHECKLIST.md  CLAUDE.md  LICENSE  README.md  autokluster-spec.md  pyproject.toml
src/autokluster/: __init__.py
src/autokluster/application/: __init__.py  clustering_service.py  embedding_loader.py
src/autokluster/domain/: __init__.py  adaptive_sampling.py  cohesion_ratio.py  eigen_gap.py  spectral_clustering.py
src/autokluster/exposition/: cli.py
src/autokluster/infrastructure/: file_adapter.py  numpy_adapter.py
tests/: conftest.py
tests/application/: test_clustering_service.py  test_embedding_loader.py
tests/domain/: test_adaptive_sampling.py  test_cohesion_ratio.py  test_eigen_gap.py  test_spectral_clustering.py
tests/exposition/: test_cli.py
tests/infrastructure/: test_file_adapter.py  test_numpy_adapter.py
